Can now add users to mongo database 'users'

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,12 @@
 {% block body %}
 	<h1> Create an account </h1>
 	<form method="POST">
+		First Name:<br>
+		<input type="text" name="first_name">
+		<br>
+		Last Name:<br>
+		<input type="text" name="last_name">
+		<br>
 		Email:<br>
 		<input type="text" name="email">
 		<br>
