Created separat register pages for tutors and tutees

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
     {% endfor %}
   {% endif %}
 {% endwith %}
+{% block head %}
 <title>Tutor/Tutee</title>
+{% endblock %}
 {% block body %}
 	Hello!
 {% endblock %}
