--- a/templates/register.html
+++ b/templates/register.html
@@ -1,22 +1,26 @@
 {% extends "base.html" %}
+
 {% block body %}
-	<h1> Create an account </h1>
-	<form method="POST">
-		First Name:<br>
-		<input type="text" name="first_name">
-		<br>
-		Last Name:<br>
-		<input type="text" name="last_name">
-		<br>
-		Email:<br>
-		<input type="text" name="email">
-		<br>
-		Password:<br>
-		<input type="password" name="password">
-		<br>
-		Confirm Password:<br>
-		<input type="password" name="confirm_password">
-		<br>
-		<button type="submit" name="b" value="Submit">Submit</button>
+	{% block header %}{% endblock %}
+	<form method="POST" id="info">
+		<p>First Name: <input type="text" name="first_name"></p>
+
+		<p>Last Name: <input type="text" name="last_name"></p>
+
+		<p>Email: <input type="text" name="email"></p>
+
+		<p>Password: <input type="password" name="password"></p>
+
+		<p>Confirm Password: <input type="password" name="confirm_password"></p>
+
+		<p>School: <input type="text" name="school"></p>
+
+		<p>Grade: <input type="numn" name="grade"></p>
+
+		{% block info %}{% endblock %}
+
+		<p><button type="submit" name="b" value="Submit">Submit</button></p>
+		
 	</form>
 {% endblock %}
+
