links for bootsrap css

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
 <html>
+<head>
+	<link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+</head>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     {% for message in messages %}
