--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,32 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<title>Tutee</title>
 	<link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/style.css') }}">
+
+	{% block head %}
+	<title>Tutor/Tutee</title>
+	{% endblock %}
+
 </head>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    {% for message in messages %}
-      <h2>{{ message }}</h2>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
-{% block head %}
-<title>Tutor/Tutee</title>
-{% endblock %}
-{% block body %}
-	Hello!
-{% endblock %}
+<body>
+	{% with messages = get_flashed_messages() %}
+  		{% if messages %}
+    		{% for message in messages %}
+      			<h2>{{ message }}</h2>
+    		{% endfor %}
+  		{% endif %}
+	{% endwith %}
+	
+	{% block body %}
+	{% endblock %}
+
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+</body>
 </html>
