--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <title>Tutee</title>
 
     <!-- Custom styles for this template -->
-    <link href="main.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='stylesheets/index.css') }}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
