--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-<html lang="en">
 
 {% block head %}
     <meta charset="utf-8">
@@ -49,7 +48,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>Softdev Final Project</p>
             </div>
           </div>
 
@@ -59,4 +58,7 @@
 
     </div>
 	{% endblock %}
-</html>
+
+  {% block postscript %}
+  <script type="text/javascript" src="../static/js/index.js"></script>
+  {% endblock postscript %}
