--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background: url(../img/background1.jpg) no-repeat center center;
+  background: url(../img/background2.jpg) no-repeat center center fixed;
 }
 body {
   color: #fff;
