--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+
 	{% with messages = get_flashed_messages() %}
   		{% if messages %}
     		{% for message in messages %}
@@ -22,14 +23,17 @@
   		{% endif %}
 	{% endwith %}
 	
+
 	{% block body %}
 	{% endblock %}
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	<script src="../../assets/js/docs.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+
+	{% block postscript %}
+  	{% endblock postscript %}
+  	
 </body>
 </html>
