--- a/templates/index.html
+++ b/templates/index.html
@@ -60,5 +60,5 @@
 	{% endblock %}
 
   {% block postscript %}
-  <script type="text/javascript" src="../static/js/index.js"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
   {% endblock postscript %}
