--- a/templates/index.html
+++ b/templates/index.html
@@ -27,11 +27,11 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h2 class="masthead-brand">Tutee</h2>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
+                  <li><a href="/about">About</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
@@ -39,19 +39,9 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+            <h1 class="cover-heading">Tutoring For Highschoolers</h1>
+            <p class="lead">Tutee is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
           </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Softdev Final Project</p>
-            </div>
-          </div>
-
         </div>
 
       </div>
