--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -76,17 +76,18 @@ body {
 .masthead-nav > li > a {
   padding-right: 0;
   padding-left: 0;
+  font-family: 'Arvo', Georgia, Times, serif;
   font-size: 16px;
   font-weight: bold;
   color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
+  color: rgba(255,255,255,.80);
   border-bottom: 2px solid transparent;
 }
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
   background-color: transparent;
   border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
+  border-bottom-color: rgba(255,255,255,.75);
 }
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
@@ -117,15 +118,6 @@ body {
   font-weight: bold;
 }
 
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
-}
 
 
 /*
