--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -113,10 +113,10 @@ body {
 .cover {
   padding: 0 20px;
 }
-.cover .btn-lg {
+/*.cover .btn-lg {
   padding: 10px 20px;
   font-weight: bold;
-}
+}*/
 
 
 
