--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,16 @@
   <nav>
     <ul class="nav nav-pills nav-justified">
       <li role="presentation"><a href="#"><h3>Login</h3></a></li>
-      <li role="presentation" class="active"><a href="#"><h3>Home</h3></a></li>
+      <li role="presentation" class="active"><a href="#"><h2>Tutee</h2></a></li>
       <li role="presentation"><a href="#"><h3>Register</h3></a></li>
     </ul>
   </nav>
+  <div class="center-block">
+    <div class="container text-center">
+    <h1 class="main">Tutee</h1>
+    <h2>A Highschool Tutoring Service</h2>
+    </div>
+  </div>
 </div>
 		
 {% endblock %}
