--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -2,6 +2,11 @@
 body {
   height: 100%;
   background: url(/static/img/background2.jpg) no-repeat center center fixed;
+  color: white !important;
+}
+
+.main {
+  font-size: 90px;
 }
 
 a {
@@ -9,5 +14,9 @@ a {
 }
 
 a:hover {
-  
+
+}
+
+.center-block {
+  margin-top: 15%;
 }
