--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     </ul>
   </nav>
   <div class="center-block">
-    <div class="container text-center">
+    <div class="text-center">
     <h1 class="main">Tutee</h1>
     <h2>A Highschool Tutoring Service</h2>
     </div>
@@ -40,4 +40,7 @@
 
   {% block postscript %}
   <script type="text/javascript" src="/static/js/index.js"></script>
+  <script src="js/TweenLite.min.js"></script>
+  <script src="js/EasePack.min.js"></script>
+  <script src="js/demo-3.js"></script>
   {% endblock postscript %}
