using regex, search still unfinished

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -5,16 +5,18 @@
 {% endblock %}
 
 {% block info %}
-	<p>Advanced courses you've taken:
-	<select multiple size="1" form="info" name="courses">
-		<option value="chemistry">AP Chemistry</option>
-		<option value="physics">AP Physics</option>
-		<option value="literature">AP Literature</option>
-	</select></p>
-	<p>Your strongest subjects:
-	<select multiple autofocus size="1" form="info" name="subjects">
-		<option value="chemistry">Chemistry</option>
-		<option value="physics">Physics</option>
-		<option value="english">English</option>
-	</select></p>
+<p> Time: 
+  <input type="text" name="times">Enter: Day;Hours</p>
+<p>Advanced courses you've taken:
+  <select multiple size="1" form="info" name="courses">
+    <option value="chemistry">AP Chemistry</option>
+    <option value="physics">AP Physics</option>
+    <option value="literature">AP Literature</option>
+</select></p>
+<p>Your strongest subjects:
+  <select multiple autofocus size="1" form="info" name="subjects">
+    <option value="chemistry">Chemistry</option>
+    <option value="physics">Physics</option>
+    <option value="english">English</option>
+</select></p>
 {% endblock %}
