--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,9 @@
 <div class="container-fluid">
   <nav>
     <ul class="nav nav-pills nav-justified">
-      <li role="presentation"><a href="#"><h3>Login</h3></a></li>
+      <li role="presentation"><a href="#"><h3 class="highlight">Login</h3></a></li>
       <li role="presentation" class="active"><a href="#"><h2>Tutee</h2></a></li>
-      <li role="presentation"><a href="#"><h3>Register</h3></a></li>
+      <li role="presentation"><a href="#"><h3 class="highlight">Register</h3></a></li>
     </ul>
   </nav>
   <div class="center-block">
