--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -20,35 +20,36 @@ body {
   background-color: rgba(48, 48, 48, 0.8);
   border: 10px solid #ffffff;
   margin-left: 25%;
-  margin-right: 25%; 
+  margin-right: 25%;
+
+  transition: border-color 0.6s ease-in-out; 
+  -webkit-transition: border-color 0.6s ease-in-out; 
+  -moz-transition: border-color 0.6s ease-in-out; 
+  -o-transition: border-color 0.6s ease-in-out;
 }
 
 .center-block:hover {
-	transition: border-color 0.5s ease-out; 
-	-webkit-transition: border-color 0.5s ease-out; 
-	-moz-transition: border-color 0.5s ease-out; 
-	-o-transition: border-color 0.5s ease-out;
 	border-color: rgba(231, 76, 60,1.0);
 }
 
 a {
   background-color: transparent !important;
-  transition: transform 0.3s !important;
-  -moz-transition: -moz-transform 0.3s !important;
-  -webkit-transition: -webkit-transform 0.3s !important;
+  transition: transform 0.6s !important;
+  -moz-transition: -moz-transform 0.6s !important;
+  -webkit-transition: -webkit-transform 0.6s !important;
 }
 
 a::before {
-  transform: translate3d(0,0,0) !important;
-  -moz-transform: translate3d(0,0,0) !important;
-  -webkit-transform: translate3d(0,0,0) !important;
+  transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
 }
 
 a:hover,
 a:focus {
-  transform: translateY(-15%) !important;
-  -moz-transform: translateY(-15%) !important;
-  -webkit-transform: translateY(-15%) !important;
+  transform: translateY(-15%);
+  -moz-transform: translateY(-15%);
+  -webkit-transform: translateY(-15%);
 }
 
 .center-block {
