--- a/templates/index.html
+++ b/templates/index.html
@@ -21,26 +21,26 @@
 {% block body %}
 
 <div class="container-fluid">
+
   <nav>
     <ul class="nav nav-pills nav-justified">
       <li role="presentation"><a href="#"><h3 class="highlight">Login</h3></a></li>
-      <li role="presentation" class="active"><a href="#"><h2>Tutee</h2></a></li>
+      <li role="presentation" class="active"><a href="/"><h2>Tutee</h2></a></li>
       <li role="presentation"><a href="#"><h3 class="highlight">Register</h3></a></li>
     </ul>
   </nav>
+
   <div class="center-block">
     <div class="text-center">
-    <h1 class="main">Tutee</h1>
-    <h2>A Highschool Tutoring Service</h2>
+      <h1 class="main">Tutee</h1>
+      <h2>A Highschool Tutoring Service</h2>
     </div>
   </div>
+
 </div>
 		
 {% endblock %}
 
   {% block postscript %}
   <script type="text/javascript" src="/static/js/index.js"></script>
-  <script src="js/TweenLite.min.js"></script>
-  <script src="js/EasePack.min.js"></script>
-  <script src="js/demo-3.js"></script>
   {% endblock postscript %}
