matches zips for each day

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -6,7 +6,7 @@
 
 {% block info %}
 <p> Time: 
-  <input type="text" name="times">Enter: Day;Hours</p>
+  <input type="text" name="times">Enter: Day;Hours;Home/School</p>
 
 
 <p>Advanced courses you've taken:
