--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -5,14 +5,9 @@
 {% endblock %}
 
 {% block info %}
-<p> Time: 
-<<<<<<< HEAD
-  <input type="text" name="times">Enter: Day;Hours</p>
-=======
-  <input type="text" name="times">Enter: Day;Hours;Home/School</p>
+<p> Time (Enter Day;Hours):
+  <input type="text" name="times">Home/School</p>
 
-
->>>>>>> Search
 <p>Advanced courses you've taken:
   <select multiple size="1" form="info" name="courses">
     <option value="chemistry">AP Chemistry</option>
