search completed, returns list of dictionaries sorted by match score

--- a/templates/search.html
+++ b/templates/search.html
@@ -14,12 +14,12 @@
 
 <p> Availability: 
 <input type="checkbox" name="days" value="Mon"> Monday <br>
-<p> Time: <input type="text" name="Mon_Time">
+<p> Time: <input type="text" name="Mon_Time_Start"> - <input type="text" name="Mon_Time_End">
 <p> Address: <input type="checkbox" name="Mon_Address" value="School">School</input><input type="checkbox" name="Mon_Address" value="Home">Home</input>
 <p> Other <input type="text" name="Mon_Other"><br>
 
 <input type="checkbox" name="days" value="Tues"> Tuesday <br>
-<p> Time: <input type="text" name="Tues_Time">
+<p> Time: <input type="text" name="Tues_Time_Start"> - <input type="text" name="Tues_Time_End">
 <p> Address: <input type="checkbox" name="Tues_Address" value="School">School</input><input type="checkbox" name="Tues_Address" value="Home">Home</input>
 <p> Other Address <input type="text" name="Tues_Other"><br>
 
