--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,8 +20,9 @@
 			    	<li><a href="/inbox">Inbox</a></li>
 			    	<li><a href="/about">About Tutee</a></li>
 		          </ul>
-		    	<ul class="nav navbar-nav navbar-right"
-		          <li><button type="button" class="btn btn-default navbar-btn" name="b" value="Logout">Log Out</button></li>
+		    	<ul class="nav navbar-nav navbar-right">
+		    		
+		          <li><form method="POST"><input type="submit" class="btn btn-default navbar-btn" name="b" value="Log Out"></form></li>
 		          <li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
 		        </ul>
 		        </div>
