--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@ l{% extends "base.html" %}
 			</div>
 				<div id="navbar" class="collapse navbar-collapse">
 		          <ul class="nav navbar-nav">
-			    <li><a href="/profile">Profile</a></li>
+			    <li><a href="/profile">Home</a></li>
 		            <li><a href="/search">Search</a></li>
 		            <li><a href="/settings">Account Settings</a></li>
 			    <li><a href="/inbox">Inbox</a></li>
@@ -29,6 +29,17 @@ l{% extends "base.html" %}
 		        </div>
 			</div>
 		</nav>
-	
+		<div class="row">
+		  <div class="col-md-4">
+		    <div class="thumbnail">
+		      <img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg">
+		      <div class="caption">
+			<h3>{{ session["first_name"] }} {{ session["last_name"] }}</h3>
+		      </div>
+		    </div>
+			   
+		  </div>
+		  <div class="col-md-8">Profile Information</div>
+		</div>
 	</div>
 {% endblock %}
