Added basic profile page, buttons on index.html work

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,9 @@
 
   <nav>
     <ul class="nav nav-pills nav-justified">
-      <li role="presentation"><a href="#"><h3 class="highlight">Login</h3></a></li>
+      <li role="presentation"><a href="/login/tutee"><h3 class="highlight">Login</h3></a></li>
       <li role="presentation" class="active"><a href="/"><h2>Tutee</h2></a></li>
-      <li role="presentation"><a href="#"><h3 class="highlight">Register</h3></a></li>
+      <li role="presentation"><a href="/register/tutee"><h3 class="highlight">Register</h3></a></li>
     </ul>
   </nav>
 
