--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,4 @@
-l{% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block navbar %}
 	<div class="container">
@@ -34,12 +34,41 @@ l{% extends "base.html" %}
 		    <div class="thumbnail">
 		      <img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg">
 		      <div class="caption">
-			<h3>{{ session["first_name"] }} {{ session["last_name"] }}</h3>
+			<h3>{{ session["first_name"] }} {{ session["last_name"] }}, {{ session["type"] }}</h3>
+			<h4>{{ session["school"] }}</h4>
+			<h5>{{ session["grade"] }}th Grade</h5>
 		      </div>
 		    </div>
-			   
 		  </div>
-		  <div class="col-md-8">Profile Information</div>
+
+		  <div class="col-md-8">
+		  	<div class="panel panel-default">
+		  		<div class="panel-heading">
+		  			Grade
+		  		</div>
+		  		<div class="panel-body">
+		  			{{session["grade"]}}
+		  		</div>
+		  	</div>
+		  	{% if session["type"]=="tutor"%}
+		  	<div class="panel panel-default">
+		  		<div class="panel-heading">
+		  			Favorite Subjects
+		  		</div>
+		  		<div class="panel-body">
+		  			{{session["subjects"]}}
+		  		</div>
+		  	</div>
+		  	<div class="panel panel-default">
+		  		<div class="panel-heading">
+		  			Favorite Classes
+		  		</div>
+		  		<div class="panel-body">
+		  			{{session[["classes"]]}}
+		  		</div>
+		  	</div>
+		  	{% endif %}
+		  </div>
 		</div>
 	</div>
 {% endblock %}
