--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,7 +34,7 @@
 		    <div class="thumbnail">
 		      <img src="http://upload.wikimedia.org/wikipedia/commons/8/8d/President_Barack_Obama.jpg">
 		      <div class="caption">
-			<h3>{{ session["first_name"] }} {{ session["last_name"] }}, {{ session["type"] }}</h3>
+			<h3>{{ session["first_name"] }} {{ session["last_name"] }}</h3>
 			<h4>{{ session["school"] }}</h4>
 			<h5>{{ session["grade"] }}th Grade</h5>
 		      </div>
@@ -42,14 +42,6 @@
 		  </div>
 
 		  <div class="col-md-8">
-		  	<div class="panel panel-default">
-		  		<div class="panel-heading">
-		  			Grade
-		  		</div>
-		  		<div class="panel-body">
-		  			{{session["grade"]}}
-		  		</div>
-		  	</div>
 		  	{% if session["type"]=="tutor"%}
 		  	<div class="panel panel-default">
 		  		<div class="panel-heading">
