--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -128,13 +128,19 @@
 
   <li class="list"><a class="m" child="m4">Location</a>
   <div id="m4" class="d 4">
-    <form>
-      <input class="d2 4" type="checkbox"> <textbox class="d2 4 text2">Home</textbox><br>
-      <input class="d2 4" type="checkbox"> <textbox class="d2 4 text2">School</textbox>
-      </form>
+      <input class="d2 4" type="checkbox" value="home" name="day1_address" > <textbox class="d2 4 text2">Home</textbox><br>
+      <input class="d2 4" type="checkbox" value="school" name="day1_address"> <textbox class="d2 4 text2">School</textbox>
   </div>    
   </li>
 </ul>
+
+<input type="hidden" id="_day1" name="day1" value="">
+<input type="hidden" id="_starthour1" name="start_hour1" value="">
+<input type="hidden" id="_startminute1" name="start_minute1" value="">
+<input type="hidden" id="_starttype1" name="start_type1" value="">
+<input type="hidden" id="_endhour1" name="end_hour1" value="">
+<input type="hidden" id="_endminute1" name="end_minute1" value="">
+<input type="hidden" id="_endtype1" name="end_type1" value="">
 
 
 
