--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -27,109 +27,113 @@
 
 <br>
 
+{% for n in range(2) %}
+
+menu{{n}}
+
 <ul id="times" class="dropdownL">
-  <li class="list"><a class="m" child="m1" id="day">Days</a>
-  <div id="m1" class="d">
-      <a class="d2 d2F 1" parent="m1" val="mon">Monday</a>
-      <a class="d2 d2F 1" parent="m1" val="tues">Tuesday</a>
-      <a class="d2 d2F 1" parent="m1" val="weds">Wednesday</a>
-      <a class="d2 d2F 1" parent="m1" val="thurs">Thursday</a>
-      <a class="d2 d2F 1" parent="m1" val="fri">Friday</a>
-      <a class="d2 d2F 1" parent="m1" val="sat">Sunday</a>
-      <a class="d2 d2F 1" parent="m1" val="sun">Saturday</a>
+  <li class="list"><a class="m" child="m1" id="day" menu="{{n}}">Days</a>
+  <div id="m1" class="menu{{n}} d">
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="mon">Monday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="tues">Tuesday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="weds">Wednesday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="thurs">Thursday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="fri">Friday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sat">Sunday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sun">Saturday</a>
     </div>   
   </li>
 
-  <li class="list"><a class="m" child="m2" id="start">Starting Time</a>
-  <div id="m2" class="d">
+  <li class="list"><a class="m" child="m2" id="start" menu="{{n}}">Starting Time</a>
+  <div id="m2" class="menu{{n}} d">
    
-    <a class="d2 d2F 2" parent="m2" id="hour" child="hours" pos="0">Hour</a>
+    <a class="menu{{n}} d2 d2F 2" parent="m2" id="hour" child="hours" pos="0">Hour</a>
     
-      <div class="s 2 hours"> 
-      <a class="s2 2 hours" parent="hour" root="m2">1</a>
-      <a class="s2 2 hours" parent="hour" root="m2">2</a>
-      <a class="s2 2 hours" parent="hour" root="m2">3</a>
-      <a class="s2 2 hours" parent="hour" root="m2">4</a>
-      <a class="s2 2 hours" parent="hour" root="m2">5</a>
-      <a class="s2 2 hours" parent="hour" root="m2">6</a>
-      <a class="s2 2 hours" parent="hour" root="m2">7</a>
-      <a class="s2 2 hours" parent="hour" root="m2">8</a>
-      <a class="s2 2 hours" parent="hour" root="m2">9</a>
-      <a class="s2 2 hours" parent="hour" root="m2">10</a>
-      <a class="s2 2 hours" parent="hour" root="m2">11</a>
-      <a class="s2 2 hours" parent="hour" root="m2">12</a>
+      <div class="menu{{n}} s 2 hours"> 
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">1</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">2</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">3</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">4</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">5</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">6</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">7</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">8</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">9</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">10</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">11</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">12</a>
     </div>
-    <a class="d2 d2F 2" parent="m2" id="min" child="minutes" pos="1">Minute</a>
+    <a class="menu{{n}} d2 d2F 2" parent="m2" id="min" child="minutes" pos="1">Minute</a>
     
-    <div class="s 2 minutes">
-      <a class="s2 2 minutes" parent="min" root="m2">:00</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:05</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:10</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:15</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:20</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:25</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:30</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:35</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:40</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:45</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:50</a>
-      <a class="s2 2 minutes" parent="min" root="m2">:55</a>
+    <div class="menu{{n}} s 2 minutes">
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:00</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:05</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:10</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:15</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:20</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:25</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:30</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:35</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:40</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:45</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:50</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:55</a>
     </div>
 
-    <a class="d2 d2F 2" parent="m2" id="type" child="types" pos="2">Type</a>    
-    <div class="s 2 types">
-      <a class="s2 2 types" parent="type" root="m2">AM</a>
-      <a class="s2 2 types" parent="type" root="m2">PM</a>
+    <a class="menu{{n}} d2 d2F 2" parent="m2" id="type" child="types" pos="2">Type</a>    
+    <div class="menu{{n}} s 2 types">
+      <a class="menu{{n}} s2 2 types" parent="type" root="m2">AM</a>
+      <a class="menu{{n}} s2 2 types" parent="type" root="m2">PM</a>
     </div>
   </li>
 
-  <li class="list"><a class="m" child="m3" id="end">Ending Time</a>
-  <div id="m3" class="d">
+  <li class="list"><a class="m" child="m3" id="end" menu="{{n}}">Ending Time</a>
+  <div id="m3" class="menu{{n}} d">
    
-    <a class="d2 d2F 3" parent="m3" id="hour2" child="hours2" pos="0">Hour</a>
+    <a class="menu{{n}} d2 d2F 3" parent="m3" id="hour2" child="hours2" pos="0">Hour</a>
     
-      <div class="s 3 hours2"> 
-      <a class="s2 3 hours2" parent="hour2" root="m3">1</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">2</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">3</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">4</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">5</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">6</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">7</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">8</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">9</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">10</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">11</a>
-      <a class="s2 3 hours2" parent="hour2" root="m3">12</a>
+      <div class="menu{{n}} s 3 hours2"> 
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">1</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">2</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">3</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">4</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">5</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">6</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">7</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">8</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">9</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">10</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">11</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">12</a>
     </div>
-    <a class="d2 d2F 3" parent="m3" id="min2" child="minutes2" pos="1">Minute</a>
+    <a class="menu{{n}} d2 d2F 3" parent="m3" id="min2" child="minutes2" pos="1">Minute</a>
     
-    <div class="s 3 minutes2">
-      <a class="s2 3 minutes2" parent="min2" root="m3">:00</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:05</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:10</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:15</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:20</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:25</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:30</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:35</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:40</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:45</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:50</a>
-      <a class="s2 3 minutes2" parent="min2" root="m3">:55</a>
+    <div class="menu{{n}} s 3 minutes2">
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:00</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:05</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:10</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:15</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:20</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:25</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:30</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:35</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:40</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:45</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:50</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:55</a>
     </div>
 
-    <a class="d2 d2F 3" parent="m3" id="type2" child="types2" pos="2">Type</a>    
-    <div class="s 3 types2">
-      <a class="s2 3 types2" parent="type2" root="m3">AM</a>
-      <a class="s2 3 types2" parent="type2" root="m3">PM</a>
+    <a class="menu{{n}} d2 d2F 3" parent="m3" id="type2" child="types2" pos="2">Type</a>    
+    <div class="menu{{n}} s 3 types2">
+      <a class="menu{{n}} s2 3 types2" parent="type2" root="m3">AM</a>
+      <a class="menu{{n}} s2 3 types2" parent="type2" root="m3">PM</a>
     </div>
   </li>
 
-  <li class="list"><a class="m" child="m4">Location</a>
-  <div id="m4" class="d 4">
-      <input class="d2 4" type="checkbox" value="home" name="day1_address" > <textbox class="d2 4 text2">Home</textbox><br>
-      <input class="d2 4" type="checkbox" value="school" name="day1_address"> <textbox class="d2 4 text2">School</textbox>
+  <li class="list"><a class="m" child="m4" menu="{{n}}">Location</a>
+  <div id="m4" class="menu{{n}} d 4">
+      <input class="menu{{n}} d2 4" type="checkbox" value="home" name="day1_address" > <textbox class="menu{{n}} d2 4 text2">Home</textbox><br>
+      <input class="menu{{n}} d2 4" type="checkbox" value="school" name="day1_address"> <textbox class="menu{{n}} d2 4 text2">School</textbox>
   </div>    
   </li>
 </ul>
@@ -143,9 +147,6 @@
 <input type="hidden" id="_endtype1" name="end_type1" value="">
 
 
-
-
-
-
 <br><br><br>
+{%endfor%}
 {% endblock %}
