almost functional button adding

--- a/templates/register.html
+++ b/templates/register.html
@@ -152,6 +152,6 @@ color: #FFF
 		<p><button type="submit" name="b" value="Submit">Submit</button></p>
 		
 	</form>
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/register_tutor.js"></script>
 {% endblock %}
