--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,6 +29,13 @@
 		        </div>
 			</div>
 		</nav>
-	
+	<div class="form-group">
+	  <form method="POST" id="message">
+	  <label for="recepient">Recepient</label>
+	  <input type="text" class="form-control" name="recipient" placeholder="Enter Recipient">
+	  <label for="message">Message</label>
+	  <input type="text" class="form-control" name="message" placeholder="Message">
+	  <input type="submit" class="btn btn-default navbar-btn" name="s" value="Send"></form>
+  </div>
 	</div>
 {% endblock %}
