--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,8 @@
 
 		<p>Last Name: <input type="text" name="last_name"></p>
 
+		<p>Username: <input type="text" name="username"></p>
+
 		<p>Email: <input type="text" name="email"></p>
 
 		<p>Password: <input type="password" name="password"></p>
