functional dropdown daysgit status

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -27,13 +27,17 @@
 
 <br>
 
-<div id="counter" val="0"></div>
+<input type="hidden" id="counter" name="counter" value="0"></div>
+
+
+<div id="dropdowns">
 
 {% set n = 0 %}
 <div id="menu{{n}}">
 {% include "dropdown.html" %}
 </div>
 
+</div>
 
 
 
