starting day editing

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -37,9 +37,9 @@
 			  	<div class="list-group">
 				    <a href="settings/update_profile" class="list-group-item">Profile</a>
 				    {% if session["type"]=="tutor" %}
-					    <a href="settings/classes" class="list-group-item">Classes</a>
-					    <a href="settings/subjects" class="list-group-item">Subjects</a>
-					    <a href="settins/times" class="list-group-item">Times</a>
+					    <a href="classes" class="list-group-item">Classes</a>
+					    <a href="subjects" class="list-group-item">Subjects</a>
+					    <a href="times" class="list-group-item">Times</a>
 					{% endif %}
 				</div>
 			  </div>
