adjust dropdown for more applicability

--- a/templates/register.html
+++ b/templates/register.html
@@ -153,5 +153,6 @@ color: #FFF
 		
 	</form>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/dropdown.js"></script>
 <script type="text/javascript" src="/static/js/register_tutor.js"></script>
 {% endblock %}
