add classes too

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -12,65 +12,7 @@
 <p>Advanced courses you've taken:
 
 
-<ul id="courses" class="dropdownL">
-<li class="list"><a class="m" child="m1" menu="a">AP Courses</a>
-<div id="menua-m1" class="menua d 1">
-<textbox class="menua d2 1 text2">Science</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="chem" name="course"><textbox class="menua d2 1 text2">AP Chemistry</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="bio" name="course"><textbox class="menua d2 1 text2">AP Biology</textbox><br><input class="menua d2 1"  type="checkbox" value="envir" name="course"><textbox class="menua d2 1 text2">AP Environmental Science</textbox><br><input class="menua d2 1"  type="checkbox" value="physC-E" name="course"><textbox class="menua d2 1 text2">AP Physics C: Electricity and Magnetism</textbox><br><input class="menua d2 1"  type="checkbox" value="physC-M" name="course"><textbox class="menua d2 1 text2">AP Physics C: Mechanics</textbox><br><input class="menua d2 1"  type="checkbox" value="phys1" name="course"><textbox class="menua d2 1 text2">AP Physics 1</textbox><br><input class="menua d2 1"  type="checkbox" value="phys2" name="course"><textbox class="menua d2 1 text2">AP Physics</textbox><br>
-
-<br><br>
-<textbox class="menua d2 1 text2">Math & CS </textbox><br>
-<input class="menua d2 1"  type="checkbox" value="calcAB" name="course"><textbox class="menua d2 1 text2">AP Calculus AB</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="calcBC" name="course"><textbox class="menua d2 1 text2">AP Calculus BC</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="cs" name="course"><textbox class="menua d2 1 text2">AP Computer Science A</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="stat" name="course"><textbox class="menua d2 1 text2">AP Statistics</textbox><br>
-
-<br><br>
-<textbox class="menua d2 1 text2">History & Social Science </textbox><br>
-<input class="menua d2 1"  type="checkbox" value="comp-gov" name="course"><textbox class="menua d2 1 text2">AP Comparative Government</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="euro" name="course"><textbox class="menua d2 1 text2">AP European History</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="geo" name="course"><textbox class="menua d2 1 text2">AP Computer Science A</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="macro" name="course"><textbox class="menua d2 1 text2">AP Human Geography</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="micro" name="course"><textbox class="menua d2 1 text2">AP Macroeconomics</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="macro" name="course"><textbox class="menua d2 1 text2">AP Microeconomics</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="pysch" name="course"><textbox class="menua d2 1 text2">AP Psychology</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="gov" name="course"><textbox class="menua d2 1 text2">AP US Government</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="us" name="course"><textbox class="menua d2 1 text2">AP US Hisory</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="world" name="course"><textbox class="menua d2 1 text2">AP World History</textbox><br>
-
-<br><br>
-<textbox class="menua d2 1 text2">English</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="lang" name="course"><textbox class="menua d2 1 text2">AP English Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="lit" name="course"><textbox class="menua d2 1 text2">AP English Literature</textbox><br>
-
-<br><br>
-<textbox class="menua d2 1 text2">Arts</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="art-his" name="course"><textbox class="menua d2 1 text2">AP Art History</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="music" name="course"><textbox class="menua d2 1 text2">AP Music Theory</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="studio-2D" name="course"><textbox class="menua d2 1 text2">AP Studio Art: 2-D Design</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="studio-3D" name="course"><textbox class="menua d2 1 text2">AP Studio Art: 3-D Design</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="studio-draw" name="course"><textbox class="menua d2 1 text2">AP Studio Art: Drawing</textbox><br>
-
-
-<br><br>
-<textbox class="menua d2 1 text2">World Languages & Cultures </textbox><br>
-<input class="menua d2 1"  type="checkbox" value="chinese" name="course"><textbox class="menua d2 1 text2">AP Chinese Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="french" name="course"><textbox class="menua d2 1 text2">AP French Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="german" name="course"><textbox class="menua d2 1 text2">AP German Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="italian" name="course"><textbox class="menua d2 1 text2">AP Italian Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="jap" name="course"><textbox class="menua d2 1 text2">AP Japanese Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="latin" name="course"><textbox class="menua d2 1 text2">AP Latin</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="span-lang" name="course"><textbox class="menua d2 1 text2">AP Spanish Language</textbox><br>
-<input class="menua d2 1"  type="checkbox" value="span-lit" name="course"><textbox class="menua d2 1 text2">AP Spanish Literature</textbox><br>
-
-
-
-
-</div>
-</li>
-</ul>  
-
+{% include "classes.html" %}
 
 <br><br>
 
