--- a/templates/register.html
+++ b/templates/register.html
@@ -93,11 +93,10 @@ top: 0px;
 }
 
 .s2 {
-position:relative;
+position: relative;
 visibility: hidden;
-display: block;
+display: inline-block;
 margin: 0;
-padding: 5px 10px;
 width: 30px;
 white-space: nowrap;
 text-align: left;
@@ -107,7 +106,12 @@ color: #2875DE;
 font: 11px arial
 }
 
-.s2:hover{
+.s2F {
+padding: 5px 10px;
+display: block;
+}
+
+.s2F:hover{
 background: #49A3FF;
 color: #FFF
 }
