--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@ margin: 0;
 padding: 0;
 list-style: none;
 float: left;
-font: bold 11px arial;
+font: bold 11px;
 }
 
 .list {
@@ -15,7 +15,7 @@ margin: 0;
 padding: 0;
 list-style: none;
 float: left;
-font: bold 11px arial;
+font: bold 11px;
 }
 
 .m {display: block;
@@ -56,7 +56,7 @@ text-align: left;
 text-decoration: none;
 background: #EAEBD8;
 color: #2875DE;
-font: 11px arial
+font: 11px;
 }
 
 .d2F {
@@ -71,7 +71,7 @@ text-align: left;
 text-decoration: none;
 background: #EAEBD8;
 color: #2875DE;
-font: 11px arial
+font: 11px;
 }
 
 
@@ -103,7 +103,7 @@ text-align: left;
 text-decoration: none;
 background: #EAEBD8;
 color: #2875DE;
-font: 11px arial
+font: 11px;
 }
 
 .s2F {
@@ -158,7 +158,6 @@ color: #FFF
 		<p><button type="submit" name="b" value="Submit">Submit</button></p>
 		
 	</form>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/dropdown.js"></script>
 <script type="text/javascript" src="/static/js/register_tutor.js"></script>
 {% endblock %}
