pre-split-integration

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -28,7 +28,7 @@
 </p>
 
 <p>Your strongest subjects:
-  <select multiple autofocus size="1" form="info" name="subjects">
+  <select multiple size="1" form="info" name="subjects">
     <option value="chemistry">Chemistry</option>
     <option value="physics">Physics</option>
     <option value="english">English</option>
