--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -1,12 +1,12 @@
 
 body {
   height: 100%;
-  background: url(/static/img/background2.jpg) no-repeat center center fixed;
+  background: url(/static/img/school.png) repeat center center fixed;
   color: white !important;
 }
 
 .highlight {
-	color: rgba(231, 76, 60,1.0) !important;
+	color: rgba(46, 204, 113,1.0) !important;
 }
 
 .main {
@@ -29,7 +29,7 @@ body {
 }
 
 .center-block:hover {
-	border-color: rgba(231, 76, 60,1.0);
+	border-color: rgba(46, 204, 113,1.0);
 }
 
 a {
